--- a/spark/examples/04-joins.ipynb
+++ b/spark/examples/04-joins.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYXeODL0T1fO",
-        "outputId": "2132db63-8ad4-4165-ed36-ae3e20d82b4f"
+        "outputId": "9462dd80-2eb3-42a0-d995-fcf49b3f3be9"
       },
       "outputs": [
         {
@@ -107,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qudxqOymJj-s",
-        "outputId": "8c831c57-0d3c-4524-c708-ac2268ff5a07"
+        "outputId": "ca6bb03a-9994-4142-fcfa-2a96fffe7d56"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RXHcXZIPLfhZ",
-        "outputId": "5eaa2971-4fb4-4379-bf3b-210b686ebb35"
+        "outputId": "c6cfc9e4-0376-40c2-ad25-c6eef4b2b4b8"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,30 +174,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3isk0KvuFreE",
-        "outputId": "a68d08de-6e8a-47ab-d66a-e96e3c4b795c"
+        "outputId": "15b8cff0-6890-4c58-b1e9-d1d4a3f565e3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----+---+-----+-----------+\n",
-            "|dpto| id| name|   deptname|\n",
-            "+----+---+-----+-----------+\n",
-            "|   1|102| Paul|Engineering|\n",
-            "|   1|103| John|Engineering|\n",
-            "|   2|104| Lisa|      Sales|\n",
-            "|   3|101|Chloe|  Marketing|\n",
-            "|   3|105| Evan|  Marketing|\n",
-            "|   3|106|  Amy|  Marketing|\n",
-            "+----+---+-----+-----------+\n",
-            "\n",
             "+---+-----+----+----+-----------+\n",
             "| id| name|dpto|dpto|   deptname|\n",
             "+---+-----+----+----+-----------+\n",
@@ -214,7 +203,7 @@
       ],
       "source": [
         "# Inner join - exists on both sides\n",
-        "employee.join(dpto, [\"dpto\"]).show()\n",
+        "#employee.join(dpto, [\"dpto\"]).show()\n",
         "# or\n",
         "employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how = \"inner\").show()"
       ]
@@ -231,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7kH24QHgL9NE",
-        "outputId": "e73306ee-c2cd-4827-8b68-f8a6720891ff"
+        "outputId": "3ec328f7-b7d5-4c0e-cb9f-5444255a25c5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,9 +256,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0DvT6UdyM_0h",
-        "outputId": "a655ef22-db16-403e-944b-61b2ec694eff"
+        "outputId": "30fe2cdb-1ad9-4d96-d0bd-c13da2b61407"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,12 +289,12 @@
       ],
       "metadata": {
         "id": "cD5qkGyDNecI",
-        "outputId": "c6844bbd-6b83-4282-afeb-44a52ba2325a",
+        "outputId": "270b1b43-33e8-4d21-ceb4-1cc83baec093",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,12 +328,12 @@
       ],
       "metadata": {
         "id": "eg4IpMjJNkzP",
-        "outputId": "3b7fe834-fc35-4456-ccc7-0187e89fbd56",
+        "outputId": "ab5e70dd-df1e-4526-f7fb-97ac475dded7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,12 +375,12 @@
       ],
       "metadata": {
         "id": "sWmJ_CmZQExG",
-        "outputId": "e5a3dfe8-9975-4fb0-a0bd-4ab2c46546fb",
+        "outputId": "84b792c6-fb97-4447-c16b-9307fff44247",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,12 +427,12 @@
       ],
       "metadata": {
         "id": "1Kv63IAYUmJy",
-        "outputId": "4c3c85b8-8d3f-40ca-cb6d-a7eb8af22d49",
+        "outputId": "ad1a49a8-52ac-45de-9516-34670f2afa92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,12 +482,12 @@
       ],
       "metadata": {
         "id": "61QkSnA7WjI8",
-        "outputId": "7aa99c20-9382-462b-c8cf-993daae769c9",
+        "outputId": "6e8d621d-4642-48a6-8ddf-29eeaa7ba00a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +520,7 @@
             "|103| John|   1|\n",
             "+---+-----+----+\n",
             "\n",
-            "Get only the difference\n",
+            "Get only the difference - does not exist on the second dataframe\n",
             "+---+-----+----+\n",
             "| id| name|dpto|\n",
             "+---+-----+----+\n",
@@ -560,26 +549,173 @@
       "source": [
         "# Q1\n",
         "# Implement Cartesian Product using dataframe and SQL\n",
-        "# Use employee and dpto"
+        "# Use employee and dpto\n",
+        "\n",
+        "employee.show()\n",
+        "dpto.show()"
       ],
       "metadata": {
-        "id": "-SDXliPvNtnr"
+        "id": "-SDXliPvNtnr",
+        "outputId": "0e77fafe-08bb-4c1b-fe03-da35e6bec28c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|101|Chloe|   3|\n",
+            "|102| Paul|   1|\n",
+            "|103| John|   1|\n",
+            "|104| Lisa|   2|\n",
+            "|105| Evan|   3|\n",
+            "|106|  Amy|   3|\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n",
+            "+----+-----------+\n",
+            "|dpto|   deptname|\n",
+            "+----+-----------+\n",
+            "|   1|Engineering|\n",
+            "|   2|      Sales|\n",
+            "|   3|  Marketing|\n",
+            "|   4|    Finance|\n",
+            "+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "employee.crossJoin(dpto).show()\n"
+      ],
+      "metadata": {
+        "id": "U71T1K2KYznd",
+        "outputId": "d331ab39-a6c6-4e9a-8860-12567aed6e2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+----+-----------+\n",
+            "| id| name|dpto|dpto|   deptname|\n",
+            "+---+-----+----+----+-----------+\n",
+            "|101|Chloe|   3|   1|Engineering|\n",
+            "|101|Chloe|   3|   2|      Sales|\n",
+            "|101|Chloe|   3|   3|  Marketing|\n",
+            "|101|Chloe|   3|   4|    Finance|\n",
+            "|102| Paul|   1|   1|Engineering|\n",
+            "|102| Paul|   1|   2|      Sales|\n",
+            "|102| Paul|   1|   3|  Marketing|\n",
+            "|102| Paul|   1|   4|    Finance|\n",
+            "|103| John|   1|   1|Engineering|\n",
+            "|103| John|   1|   2|      Sales|\n",
+            "|103| John|   1|   3|  Marketing|\n",
+            "|103| John|   1|   4|    Finance|\n",
+            "|104| Lisa|   2|   1|Engineering|\n",
+            "|104| Lisa|   2|   2|      Sales|\n",
+            "|104| Lisa|   2|   3|  Marketing|\n",
+            "|104| Lisa|   2|   4|    Finance|\n",
+            "|105| Evan|   3|   1|Engineering|\n",
+            "|105| Evan|   3|   2|      Sales|\n",
+            "|105| Evan|   3|   3|  Marketing|\n",
+            "|105| Evan|   3|   4|    Finance|\n",
+            "+---+-----+----+----+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Q2\n",
         "# Implement \"Left Anti Join\" using SQL\n",
-        "# Use employee and dpto"
+        "# Use employee and dpto\n",
+        "\n",
+        "employee.show()\n",
+        "dpto.show()"
       ],
       "metadata": {
-        "id": "EjiSSK6HOsGS"
+        "id": "EjiSSK6HOsGS",
+        "outputId": "487213bb-fa3a-4aaf-d13d-308215922aaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|101|Chloe|   3|\n",
+            "|102| Paul|   1|\n",
+            "|103| John|   1|\n",
+            "|104| Lisa|   2|\n",
+            "|105| Evan|   3|\n",
+            "|106|  Amy|   3|\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n",
+            "+----+-----------+\n",
+            "|dpto|   deptname|\n",
+            "+----+-----------+\n",
+            "|   1|Engineering|\n",
+            "|   2|      Sales|\n",
+            "|   3|  Marketing|\n",
+            "|   4|    Finance|\n",
+            "+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how = \"left_anti\").show()\n",
+        "spark.sql(\"select * from employee left anti join dpto using (dpto)\").show()"
+      ],
+      "metadata": {
+        "id": "GbGgPbV2ZEX-",
+        "outputId": "b55fa613-6052-4a5a-aeeb-f544e34c8e4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+---+-----+\n",
+            "|dpto| id| name|\n",
+            "+----+---+-----+\n",
+            "|   5|107|Jimmy|\n",
+            "+----+---+-----+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
