Criado através do Colab

--- a/spark/examples/03-sql.ipynb
+++ b/spark/examples/03-sql.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/03-sql.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ducline/edit-data_processing/blob/main/spark/examples/03-sql.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -91,11 +91,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "KosbhJyJqMSI"
+        "id": "KosbhJyJqMSI",
+        "outputId": "2e467b13-b99f-48db-8d23-98a0f7e8c2d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# TempVIews - Session level\n",
         "df.createOrReplaceTempView(\"my_table\")\n",
@@ -104,11 +122,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "tkqjl78sqMSI"
+        "id": "tkqjl78sqMSI",
+        "outputId": "dffabf39-afbe-4f8a-da24-c6216eb06c45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# GlobalTempViews - Spark application level - global_temp database\n",
         "df.createOrReplaceGlobalTempView(\"my_table2\")\n",
@@ -117,13 +153,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rk0SIo0nqRwL",
-        "outputId": "33f84528-40fa-4c97-c11b-964a932a3daf"
+        "outputId": "8385ef31-a119-4efb-e427-64646f3b962b"
       },
       "outputs": [
         {
@@ -148,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {
         "id": "dSbgHD32quHR"
       },
@@ -166,12 +202,12 @@
       ],
       "metadata": {
         "id": "YVFyShr2ZD5j",
-        "outputId": "1349c089-1b49-4ba2-e859-1cf62bc7e066",
+        "outputId": "9301d04d-e2f2-4797-c124-bd4249d838df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,6 +217,7 @@
             "|namespace|tableName|isTemporary|\n",
             "+---------+---------+-----------+\n",
             "|     test| my_table|      false|\n",
+            "|         | my_table|       true|\n",
             "+---------+---------+-----------+\n",
             "\n"
           ]
@@ -194,12 +231,12 @@
       ],
       "metadata": {
         "id": "ISx7T8ddZVjl",
-        "outputId": "5381ad76-32f6-4e7d-ef9d-2eb1d9b080da",
+        "outputId": "3be43ae8-98e4-4dd8-caf3-ade20fd56b63",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
