Criado através do Colab

--- a/spark/examples/05-aggregations.ipynb
+++ b/spark/examples/05-aggregations.ipynb
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GPdtlX5BSI1w",
-        "outputId": "d995712e-6068-40a6-f274-32820f575a34"
+        "outputId": "2f58246c-c199-49d5-cfe5-2a5b89576b0a"
       },
       "outputs": [
         {
@@ -152,7 +152,7 @@
         "# creating temp view\n",
         "spark.sql(sql_query)\n",
         "\n",
-        "df = spark.table(\"basic_pays\")\n",
+        "dfinicial = spark.table(\"basic_pays\")\n",
         "df.show()\n"
       ]
     },
@@ -252,6 +252,50 @@
     {
       "cell_type": "code",
       "source": [
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "ORzVBRdHhzet",
+        "outputId": "a7c7f205-9b2a-4b9c-e267-11baa627758e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------+----------+------+\n",
+            "|    employee_name|department|salary|\n",
+            "+-----------------+----------+------+\n",
+            "|     Diane Murphy|Accounting|  8435|\n",
+            "|   Mary Patterson|Accounting|  9998|\n",
+            "|    Jeff Firrelli|Accounting|  8992|\n",
+            "|William Patterson|Accounting|  8870|\n",
+            "|    Gerard Bondur|Accounting| 11472|\n",
+            "|      Anthony Bow|Accounting|  6627|\n",
+            "|  Leslie Jennings|        IT|  8113|\n",
+            "|  Leslie Thompson|        IT|  5186|\n",
+            "|   Julie Firrelli|     Sales|  9181|\n",
+            "|  Steve Patterson|     Sales|  9441|\n",
+            "|   Foon Yue Tseng|     Sales|  6660|\n",
+            "|    George Vanauf|     Sales| 10563|\n",
+            "|      Loui Bondur|       SCM| 10449|\n",
+            "| Gerard Hernandez|       SCM|  6949|\n",
+            "|  Pamela Castillo|       SCM| 11303|\n",
+            "|       Larry Bott|       SCM| 11798|\n",
+            "|      Barry Jones|       SCM| 10586|\n",
+            "+-----------------+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Q1\n",
         "# Aggregate data by surname\n",
         "# Calculate highest salary by surname\n",
@@ -260,15 +304,54 @@
         "# Count how many employees has that surname\n",
         "# Put in an array all the first_names of the respective surname ordered\n",
         "\n",
+        "from pyspark.sql import functions as F\n",
         "\n",
-        "# schema expected:\n",
-        "# surname | count_employees | highest_salary | employee_with_highest_salary | department_with_highest_salary | array_with_all_the_first_names |"
+        "df = dfinicial\n",
+        "df = df.withColumn(\"names_array\", split(col(\"employee_name\"), \" \"))\n",
+        "df = df.withColumn(\"first_name\", col(\"names_array\")[0])\n",
+        "df = df.withColumn(\"surname\", col(\"names_array\")[1])\n",
+        "df = df.groupby(\"surname\").agg(\n",
+        "      F.max(\"salary\").alias(\"max_salary_by_surname\"),\n",
+        "      F.count(lit(\"\")).alias(\"count_employees\"),\n",
+        "      F.array_agg(\"first_name\")\n",
+        "    )\n",
+        "df = df.orderBy(\"max_salary_by_surname\", ascending = False)\n",
+        "df.show(100, False)\n"
       ],
       "metadata": {
-        "id": "sAB_dzZabf_o"
+        "id": "sAB_dzZabf_o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ca2fcf2-f4c3-466b-c54d-4aedb89314d9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---------------------+---------------+------------------------+\n",
+            "|surname  |max_salary_by_surname|count_employees|collect_list(first_name)|\n",
+            "+---------+---------------------+---------------+------------------------+\n",
+            "|Bott     |11798                |1              |[Larry]                 |\n",
+            "|Bondur   |11472                |2              |[Gerard, Loui]          |\n",
+            "|Castillo |11303                |1              |[Pamela]                |\n",
+            "|Jones    |10586                |1              |[Barry]                 |\n",
+            "|Vanauf   |10563                |1              |[George]                |\n",
+            "|Patterson|9998                 |3              |[Mary, William, Steve]  |\n",
+            "|Firrelli |9181                 |2              |[Jeff, Julie]           |\n",
+            "|Murphy   |8435                 |1              |[Diane]                 |\n",
+            "|Jennings |8113                 |1              |[Leslie]                |\n",
+            "|Hernandez|6949                 |1              |[Gerard]                |\n",
+            "|Yue      |6660                 |1              |[Foon]                  |\n",
+            "|Bow      |6627                 |1              |[Anthony]               |\n",
+            "|Thompson |5186                 |1              |[Leslie]                |\n",
+            "+---------+---------------------+---------------+------------------------+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
