--- a/spark/examples/07-udf.ipynb
+++ b/spark/examples/07-udf.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/07-udf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ducline/edit-data_processing/blob/main/spark/examples/07-udf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,18 +51,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYXeODL0T1fO",
-        "outputId": "c410e46c-4a50-43aa-926f-d0417c6280d2"
+        "outputId": "26dcae41-76eb-422e-bd05-3a6a0940030a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.5.3)\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -97,18 +97,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cJW8fERxq5RC",
-        "outputId": "c52939e7-33a0-4267-db88-7b0ffa0fb33a"
+        "outputId": "154bf3cc-e9a1-455c-8c76-e5eaf8602f59"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "+----------+--------------+------------+\n",
             "|slen(name)|to_upper(name)|add_one(age)|\n",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "7Er_akN6suUy"
       },
@@ -165,18 +165,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "55CrjaQZs7Fm",
-        "outputId": "883756ee-352f-4b64-f449-3c4afb798765"
+        "outputId": "4d550577-f5b6-4510-f1dd-76c4c3bf3c79"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "+---+-----+----+---------------+\n",
             "| id| name|dpto|additional_info|\n",
@@ -211,18 +211,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yqYB0iRtyfi9",
-        "outputId": "41afc614-43d1-49a8-8c03-8ceb71a019db"
+        "outputId": "cc986cec-3d4f-4d0f-e86e-e167b7b230de"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "+------+\n",
             "|length|\n",
@@ -255,15 +255,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 32,
       "metadata": {
-        "id": "dMaASP-rxwTp"
+        "id": "dMaASP-rxwTp",
+        "outputId": "7a292558-823f-4b44-9f79-d9cd0d38c625",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+---------------+\n",
+            "| id| name|dpto|department_name|\n",
+            "+---+-----+----+---------------+\n",
+            "|101|Chloe|   3|             HR|\n",
+            "|102| Paul|   1|      Marketing|\n",
+            "|103| John|   1|      Marketing|\n",
+            "|104| Lisa|   2|          Sales|\n",
+            "|105| Evan|   3|             HR|\n",
+            "|106|  Amy|   3|             HR|\n",
+            "|107|Jimmy|   5|             IT|\n",
+            "+---+-----+----+---------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Q1\n",
         "# Create an UDF to add the department name to the dataset based on dpto id\n",
-        "# mapping: {1: \"Marketing\", 2: \"Sales\", 3: \"HR\", 4: \"Finance\", 5: \"IT\"}"
+        "# mapping: {1: \"Marketing\", 2: \"Sales\", 3: \"HR\", 4: \"Finance\", 5: \"IT\"}\n",
+        "\n",
+        "dpto = {1: \"Marketing\", 2: \"Sales\", 3: \"HR\", 4: \"Finance\", 5: \"IT\"}\n",
+        "\n",
+        "@udf\n",
+        "def find_department(dptoid, department=dpto):\n",
+        "  if dptoid in department:\n",
+        "    return department[dptoid]\n",
+        "\n",
+        "employee.select(employee[\"*\"], find_department(\"dpto\").alias(\"department_name\")).show()\n"
       ]
     }
   ],
