Criado através do Colab

--- a/spark/challenges/challenge_1.ipynb
+++ b/spark/challenges/challenge_1.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/challenges/challenge_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ducline/edit-data_processing/blob/main/spark/challenges/challenge_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -53,18 +53,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYXeODL0T1fO",
-        "outputId": "c410e46c-4a50-43aa-926f-d0417c6280d2"
+        "outputId": "6a3847f5-745a-4a87-9356-7221953fa411"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.5.3)\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n"
@@ -74,6 +74,111 @@
       "source": [
         "%pip install pyspark"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import DataFrame, SparkSession\n",
+        "from pyspark.sql.functions import *\n",
+        "from pyspark.sql.types import *\n",
+        "import requests\n",
+        "\n",
+        "class ETLFlow:\n",
+        "    def __init__(self, spark: SparkSession) -> None:\n",
+        "        self.spark = spark\n",
+        "\n",
+        "    def extract_from_file(self, format: str, path: str, **kwargs) -> DataFrame:\n",
+        "        df = self.spark.read.format(format).load(path)\n",
+        "        return df\n",
+        "\n",
+        "    def extract_from_api(self, url: str, schema: StructType = None):\n",
+        "      response = requests.get(url)\n",
+        "      rdd = spark.sparkContext.parallelize(response.json())\n",
+        "      if schema:\n",
+        "        df = spark.read.schema(schema).json(rdd)\n",
+        "      else:\n",
+        "        df = spark.read.json(rdd)\n",
+        "      return df\n",
+        "\n",
+        "    def load(self, df: DataFrame, format: str, path: str, **kwargs) -> None:\n",
+        "        df.write.mode(\"overwrite\").format(format).save(path)\n",
+        "\n",
+        "class ETLTask(ETLFlow):\n",
+        "\n",
+        "    def __init__(self, spark: SparkSession) -> None:\n",
+        "        self.spark = spark\n",
+        "\n",
+        "    def ingestion_vehicles(self):\n",
+        "      vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
+        "                                  StructField('block_id', StringType(), True),\n",
+        "                                  StructField('current_status', StringType(), True),\n",
+        "                                  StructField('id', StringType(), True),\n",
+        "                                  StructField('lat', FloatType(), True),\n",
+        "                                  StructField('line_id', StringType(), True),\n",
+        "                                  StructField('lon', FloatType(), True),\n",
+        "                                  StructField('pattern_id', StringType(), True),\n",
+        "                                  StructField('route_id', StringType(), True),\n",
+        "                                  StructField('schedule_relationship', StringType(), True),\n",
+        "                                  StructField('shift_id', StringType(), True),\n",
+        "                                  StructField('speed', FloatType(), True),\n",
+        "                                  StructField('stop_id', StringType(), True),\n",
+        "                                  StructField('timestamp', TimestampType(), True),\n",
+        "                                  StructField('trip_id', StringType(), True)])\n",
+        "\n",
+        "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
+        "\n",
+        "    def cleansing_vehicles(self):\n",
+        "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
+        "\n",
+        "      # transformations\n",
+        "      df = df.withColumn(\"new_column\", lit(\"test\"))\n",
+        "      df = df.drop_duplicates()\n",
+        "\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
+        "\n",
+        "    def enrich(self):\n",
+        "        pass\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "\n",
+        "    # init spark\n",
+        "    from pyspark.sql import SparkSession\n",
+        "    spark = SparkSession.builder.master('local').appName('ETL Program').getOrCreate()\n",
+        "\n",
+        "    print(\"Starting ETL program\")\n",
+        "    etl = ETLTask(spark)\n",
+        "\n",
+        "    # run tasks\n",
+        "    print(\"Running Task - Ingestion Vehicles\")\n",
+        "    etl.ingestion_vehicles()\n",
+        "\n",
+        "    print(\"Running Task - Cleansing Vehicles\")\n",
+        "    etl.cleansing_vehicles()\n",
+        "\n",
+        "    #etl.enrich()\n",
+        "\n",
+        "    print(\"ETL program completed\")"
+      ],
+      "metadata": {
+        "id": "sVe3yuAvTz9c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check results\n",
+        "spark.read.parquet(\"/content/lake/bronze/vehicles\").show()\n",
+        "spark.read.parquet(\"/content/lake/silver/vehicles\").show()"
+      ],
+      "metadata": {
+        "id": "mpvai9Q7T01M"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
