Criado através do Colab

--- a/spark/challenges/challenge_1.ipynb
+++ b/spark/challenges/challenge_1.ipynb
@@ -57,11 +57,11 @@
         "!ls -l lake/"
       ],
       "metadata": {
-        "id": "dIya5aHplALd",
-        "outputId": "af5a565d-3b58-4fd5-e060-7207aedf63b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dIya5aHplALd",
+        "outputId": "af5a565d-3b58-4fd5-e060-7207aedf63b1"
       },
       "execution_count": 9,
       "outputs": [
@@ -127,9 +127,9 @@
         "\n",
         "    def load(self, df: DataFrame, format: str, path: str, partition_column: str, **kwargs) -> None:\n",
         "        if partition_column:\n",
-        "          df.write.mode(\"overwrite\").partitionBy().format(format).save(path)\n",
+        "          df.coalesce(1).write.mode(\"overwrite\").partitionBy().format(format).save(path)\n",
         "        else:\n",
-        "          df.write.mode(\"overwrite\").format(format).save(path)\n",
+        "          df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
         "\n",
         "class ETLTask(ETLFlow):\n",
         "\n",
@@ -154,7 +154,7 @@
         "                                  StructField('trip_id', StringType(), True)])\n",
         "\n",
         "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
         "\n",
         "    def cleansing_vehicles(self):\n",
         "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
@@ -163,7 +163,7 @@
         "      df = df.withColumn(\"date\", date_format(col(\"timestamp\"), \"yyyy-MM-dd\"))\n",
         "      df = df.drop_duplicates()\n",
         "\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\", partition_column=\"date\")\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
         "\n",
         "    def enrich(self):\n",
         "        pass\n",
@@ -182,8 +182,8 @@
         "    print(\"Running Task - Ingestion Vehicles\")\n",
         "    etl.ingestion_vehicles()\n",
         "\n",
-        "    print(\"Running Task - Cleansing Vehicles\")\n",
-        "    etl.cleansing_vehicles()\n",
+        "    #print(\"Running Task - Cleansing Vehicles\")\n",
+        "    #etl.cleansing_vehicles()\n",
         "\n",
         "    #etl.enrich()\n",
         "\n",
@@ -191,129 +191,20 @@
       ],
       "metadata": {
         "id": "sVe3yuAvTz9c",
-        "outputId": "a7ebb38a-9c01-47e9-dad1-e63f23e7581c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8fda3c0d-1234-4d94-b22c-66f7145e483d"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Starting ETL program\n",
-            "Ingesting Vehicles...\n",
-            "Ingesting Lines...\n",
-            "Ingesting Municipalities...\n",
+            "Running Task - Ingestion Vehicles\n",
             "ETL program completed\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Check Vehicles Data in Bronze Layer\n",
-        "spark.read.parquet(\"/content/lake/bronze/vehicles\").show()\n",
-        "\n",
-        "# Check Lines Data\n",
-        "spark.read.parquet(\"/content/lake/bronze/lines\").show()\n",
-        "\n",
-        "# Check Municipalities Data\n",
-        "spark.read.parquet(\"/content/lake/bronze/municipalities\").show()\n"
-      ],
-      "metadata": {
-        "id": "pYIE8w1ijPkk",
-        "outputId": "6a164d91-45e8-4518-bc5f-f054ba8de6ae",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+-------+--------------------+--------------+--------+---------+-------+---------+----------+--------+---------------------+------------+---------+-------+-------------------+--------------------+----------+\n",
-            "|bearing|            block_id|current_status|      id|      lat|line_id|      lon|pattern_id|route_id|schedule_relationship|    shift_id|    speed|stop_id|          timestamp|             trip_id|      date|\n",
-            "+-------+--------------------+--------------+--------+---------+-------+---------+----------+--------+---------------------+------------+---------+-------+-------------------+--------------------+----------+\n",
-            "|    294|20241122-64010066...| IN_TRANSIT_TO|44|12525|38.643368|   4604|-9.010638|  4604_0_2|  4604_0|            SCHEDULED|121770234560|     10.0| 090038|2024-11-22 20:36:17|4604_0_2|2200|202...|2024-11-22|\n",
-            "|    270|20241122-64010199...|   INCOMING_AT|44|12730|38.488678|   4425|-8.808887|  4425_0_1|  4425_0|            SCHEDULED|112510234560|     10.0| 160493|2024-11-22 20:36:30|4425_0_1|2200|200...|2024-11-22|\n",
-            "|    326|20241122-64010084...| IN_TRANSIT_TO|44|12603| 38.66523|   4512| -8.92642|  4512_0_2|  4512_0|            SCHEDULED|121610234560|     10.0| 100365|2024-11-22 20:36:29|4512_0_2|2200|193...|2024-11-22|\n",
-            "|     15|20241122-64010300...| IN_TRANSIT_TO|44|12734|38.571568|   4562|-8.876755|  4562_0_1|  4562_0|            SCHEDULED|111600234560|7.7777777| 130009|2024-11-22 20:36:17|4562_0_1|2200|201...|2024-11-22|\n",
-            "|     58|20241122-64010168...|   INCOMING_AT|44|12569|38.525097|   4730|-8.991966|  4730_0_1|  4730_0|            SCHEDULED|113150234560|19.722221| 160560|2024-11-22 20:36:29|4730_0_1|2200|183...|2024-11-22|\n",
-            "|    306|20241122-64010061...|   INCOMING_AT|44|12509|38.575645|   4612|-9.008621|  4612_0_2|  4612_0|            SCHEDULED|121820234560|13.055555| 130696|2024-11-22 20:36:30|4612_0_2|2200|202...|2024-11-22|\n",
-            "|    345|20241122-64010149...| IN_TRANSIT_TO|44|12673| 38.67888|   4725|-9.174577|  4725_0_2|  4725_0|            SCHEDULED|113340234560|18.055555| 060021|2024-11-22 20:36:17|4725_0_2|2200|200...|2024-11-22|\n",
-            "|    170|20241122-64010218...|   INCOMING_AT|44|12699|  38.6482|   4701|-8.991754|  4701_0_1|  4701_0|            SCHEDULED|123560234560|     10.0| 090097|2024-11-22 20:36:29|4701_0_1|2200|200...|2024-11-22|\n",
-            "|    113|20241122-64010098...|    STOPPED_AT|44|12506|38.750732|   4600|-8.941856|  4600_0_2|  4600_0|            SCHEDULED|121480234560|      0.0| 010137|2024-11-22 20:36:23|4600_0_2|2200|190...|2024-11-22|\n",
-            "|    124|20241122-64010421...|   INCOMING_AT|44|12097| 38.59928|   4611|-9.012408|  4611_0_1|  4611_0|            SCHEDULED|121430234560|4.7222223| 130680|2024-11-22 20:36:28|4611_0_1|2200|203...|2024-11-22|\n",
-            "|    313|20241122-64010569...| IN_TRANSIT_TO|44|12662|38.753357|   4706|-9.031062|  4706_0_1|  4706_0|            SCHEDULED|123530234560|26.944445| 060005|2024-11-22 20:36:17|4706_0_1|2200|194...|2024-11-22|\n",
-            "|    340|20241122-64010532...| IN_TRANSIT_TO|44|12501|38.712414|   4501|-8.991417|  4501_0_2|  4501_0|            SCHEDULED|121960234560| 6.111111| 100286|2024-11-22 20:36:16|4501_0_2|2200|203...|2024-11-22|\n",
-            "|    266|20241122-64010067...|   INCOMING_AT|44|12551| 38.65296|   4600|-9.020465|  4600_0_1|  4600_0|            SCHEDULED|121760234560|3.6111112| 090012|2024-11-22 20:36:26|4600_0_1|2200|193...|2024-11-22|\n",
-            "|     77|           1_1462-11| IN_TRANSIT_TO| 41|1142|38.723106|   1726|-9.166437|  1726_1_2|  1726_1|            SCHEDULED|        1484| 8.055555| 060027|2024-11-22 20:35:35|1726_1_2_1930_195...|2024-11-22|\n",
-            "|    285|20241122-64010197...| IN_TRANSIT_TO|44|12552|38.525013|   4436|-8.884215|  4436_0_2|  4436_0|            SCHEDULED|112530234560|6.9444447| 160066|2024-11-22 20:36:20|4436_0_2|2200|203...|2024-11-22|\n",
-            "|    356|20241122-64010060...| IN_TRANSIT_TO|44|12521| 38.65679|   4600|-9.055373|  4600_0_2|  4600_0|            SCHEDULED|121830234560| 9.444445| 040018|2024-11-22 20:36:18|4600_0_2|2200|203...|2024-11-22|\n",
-            "|      5|           1_1667-11|    STOPPED_AT| 41|1802|38.755856|   1229| -9.28674|  1229_0_3|  1229_0|            SCHEDULED|        1686|      0.0| 170911|2024-11-22 20:36:26|1229_0_3_2000_202...|2024-11-22|\n",
-            "|    313|20241122-64010101...| IN_TRANSIT_TO|44|12515|38.756176|   4514|-8.618892|  4514_0_2|  4514_0|            SCHEDULED|121450234560|10.555555| 100213|2024-11-22 20:36:18|4514_0_2|2200|191...|2024-11-22|\n",
-            "|     90|20241122-64010155...| IN_TRANSIT_TO|44|12688| 38.58408|   4725|-8.942727|  4725_0_1|  4725_0|            SCHEDULED|113270234560|28.055555| 160027|2024-11-22 20:36:18|4725_0_1|2200|193...|2024-11-22|\n",
-            "|    186|20241122-64010001...| IN_TRANSIT_TO|44|12697| 38.76803|   4706|-9.100365|  4706_0_2|  4706_0|            SCHEDULED|123470234560|      0.0| 060002|2024-11-22 20:36:19|4706_0_2|2200|201...|2024-11-22|\n",
-            "+-------+--------------------+--------------+--------+---------+-------+---------+----------+--------+---------------------+------------+---------+-------+-------------------+--------------------+----------+\n",
-            "only showing top 20 rows\n",
-            "\n",
-            "+----+----+-----+\n",
-            "|  id|name|route|\n",
-            "+----+----+-----+\n",
-            "|1001|NULL| NULL|\n",
-            "|1002|NULL| NULL|\n",
-            "|1003|NULL| NULL|\n",
-            "|1004|NULL| NULL|\n",
-            "|1005|NULL| NULL|\n",
-            "|1006|NULL| NULL|\n",
-            "|NULL|NULL| NULL|\n",
-            "|1009|NULL| NULL|\n",
-            "|1010|NULL| NULL|\n",
-            "|1011|NULL| NULL|\n",
-            "|1012|NULL| NULL|\n",
-            "|1013|NULL| NULL|\n",
-            "|1014|NULL| NULL|\n",
-            "|1015|NULL| NULL|\n",
-            "|1101|NULL| NULL|\n",
-            "|1103|NULL| NULL|\n",
-            "|1105|NULL| NULL|\n",
-            "|1106|NULL| NULL|\n",
-            "|1107|NULL| NULL|\n",
-            "|1109|NULL| NULL|\n",
-            "+----+----+-----+\n",
-            "only showing top 20 rows\n",
-            "\n",
-            "+----+--------------------+----------+\n",
-            "|  id|                name|population|\n",
-            "+----+--------------------+----------+\n",
-            "|0712|        Vendas Novas|      NULL|\n",
-            "|1101|            Alenquer|      NULL|\n",
-            "|1102|   Arruda dos Vinhos|      NULL|\n",
-            "|1105|             Cascais|      NULL|\n",
-            "|1106|              Lisboa|      NULL|\n",
-            "|1107|              Loures|      NULL|\n",
-            "|1109|               Mafra|      NULL|\n",
-            "|1110|              Oeiras|      NULL|\n",
-            "|1111|              Sintra|      NULL|\n",
-            "|1112|Sobral de Monte A...|      NULL|\n",
-            "|1113|       Torres Vedras|      NULL|\n",
-            "|1114| Vila Franca de Xira|      NULL|\n",
-            "|1115|             Amadora|      NULL|\n",
-            "|1116|            Odivelas|      NULL|\n",
-            "|1502|           Alcochete|      NULL|\n",
-            "|1503|              Almada|      NULL|\n",
-            "|1504|            Barreiro|      NULL|\n",
-            "|1506|               Moita|      NULL|\n",
-            "|1507|             Montijo|      NULL|\n",
-            "|1508|             Palmela|      NULL|\n",
-            "+----+--------------------+----------+\n",
-            "only showing top 20 rows\n",
-            "\n"
           ]
         }
       ]
@@ -322,7 +213,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
