--- a/spark/challenges/challenge_1.ipynb
+++ b/spark/challenges/challenge_1.ipynb
@@ -105,10 +105,12 @@
       "source": [
         "from pyspark.sql import DataFrame, SparkSession\n",
         "from pyspark.sql.functions import *\n",
+        "import pyspark.sql.functions as F\n",
         "from pyspark.sql.types import *\n",
         "import requests\n",
         "\n",
         "class ETLFlow:\n",
+        "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
         "\n",
@@ -119,15 +121,16 @@
         "    def extract_from_api(self, url: str, schema: StructType = None):\n",
         "      response = requests.get(url)\n",
         "      rdd = spark.sparkContext.parallelize(response.json())\n",
+        "\n",
         "      if schema:\n",
         "        df = spark.read.schema(schema).json(rdd)\n",
         "      else:\n",
         "        df = spark.read.json(rdd)\n",
         "      return df\n",
         "\n",
-        "    def load(self, df: DataFrame, format: str, path: str, partition_column: str, **kwargs) -> None:\n",
+        "    def load(self, df: DataFrame, format: str, path: str, partition_column: str = None, **kwargs) -> None:\n",
         "        if partition_column:\n",
-        "          df.coalesce(1).write.mode(\"overwrite\").partitionBy().format(format).save(path)\n",
+        "          df.coalesce(1).write.mode(\"overwrite\").partitionBy(partition_column).format(format).save(path)\n",
         "        else:\n",
         "          df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
         "\n",
@@ -135,6 +138,22 @@
         "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
+        "\n",
+        "    def ingestion_lines(self):\n",
+        "      # schema\n",
+        "      lines_schema = StructType([StructField('color', StringType(), True),\n",
+        "                                 StructField('facilities', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('id', StringType(), True),\n",
+        "                                 StructField('localities',ArrayType(StringType(), True), True),\n",
+        "                                 StructField('long_name', StringType(), True),\n",
+        "                                 StructField('municipalities', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('patterns', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('routes', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('short_name', StringType(), True), StructField('text_color', StringType(), True)])\n",
+        "      # ingestion\n",
+        "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
+        "      # load\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
         "\n",
         "    def ingestion_vehicles(self):\n",
         "      vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
@@ -154,23 +173,22 @@
         "                                  StructField('trip_id', StringType(), True)])\n",
         "\n",
         "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
+        "      # create date column\n",
+        "      # date(from_unixtime(1732305594))\n",
+        "      df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
         "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
         "\n",
         "    def cleansing_vehicles(self):\n",
         "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
-        "\n",
         "      # transformations\n",
-        "      df = df.withColumn(\"date\", date_format(col(\"timestamp\"), \"yyyy-MM-dd\"))\n",
+        "      df = df.withColumn(\"new_column\", lit(\"test\"))\n",
         "      df = df.drop_duplicates()\n",
-        "\n",
         "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
         "\n",
         "    def enrich(self):\n",
         "        pass\n",
         "\n",
-        "\n",
         "if __name__ == '__main__':\n",
-        "\n",
         "    # init spark\n",
         "    from pyspark.sql import SparkSession\n",
         "    spark = SparkSession.builder.master('local').appName('ETL Program').getOrCreate()\n",
@@ -182,12 +200,15 @@
         "    print(\"Running Task - Ingestion Vehicles\")\n",
         "    etl.ingestion_vehicles()\n",
         "\n",
+        "    print(\"Running Task - Ingestion Lines\")\n",
+        "    etl.ingestion_lines()\n",
+        "\n",
         "    #print(\"Running Task - Cleansing Vehicles\")\n",
-        "    #etl.cleansing_vehicles()\n",
+        "    # etl.cleansing_vehicles()\n",
         "\n",
         "    #etl.enrich()\n",
         "\n",
-        "    print(\"ETL program completed\")"
+        "    print(\"ETL program completed\")\n"
       ],
       "metadata": {
         "id": "sVe3yuAvTz9c",
