--- a/spark/challenges/challenge_2.ipynb
+++ b/spark/challenges/challenge_2.ipynb
@@ -90,28 +90,37 @@
         "import pyspark.sql.functions as F\n",
         "from pyspark.sql.types import *\n",
         "import requests\n",
+        "\n",
         "class ETLFlow:\n",
+        "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
+        "\n",
         "    def extract_from_file(self, format: str, path: str, **kwargs) -> DataFrame:\n",
         "        df = self.spark.read.format(format).load(path)\n",
         "        return df\n",
+        "\n",
         "    def extract_from_api(self, url: str, schema: StructType = None):\n",
         "      response = requests.get(url)\n",
         "      rdd = spark.sparkContext.parallelize(response.json())\n",
+        "\n",
         "      if schema:\n",
         "        df = spark.read.schema(schema).json(rdd)\n",
         "      else:\n",
         "        df = spark.read.json(rdd)\n",
         "      return df\n",
+        "\n",
         "    def load(self, df: DataFrame, format: str, path: str, partition_column: str = None, **kwargs) -> None:\n",
         "        if partition_column:\n",
         "          df.coalesce(1).write.mode(\"overwrite\").partitionBy(partition_column).format(format).save(path)\n",
         "        else:\n",
         "          df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
+        "\n",
         "class ETLTask(ETLFlow):\n",
+        "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
+        "\n",
         "    def ingestion_lines(self):\n",
         "      # schema\n",
         "      lines_schema = StructType([StructField('color', StringType(), True),\n",
@@ -127,6 +136,7 @@
         "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
         "      # load\n",
         "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
+        "\n",
         "    def ingestion_vehicles(self):\n",
         "      vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
         "                                  StructField('block_id', StringType(), True),\n",
@@ -143,34 +153,44 @@
         "                                  StructField('stop_id', StringType(), True),\n",
         "                                  StructField('timestamp', TimestampType(), True),\n",
         "                                  StructField('trip_id', StringType(), True)])\n",
+        "\n",
         "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
         "      # create date column\n",
         "      # date(from_unixtime(1732305594))\n",
         "      df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
         "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
+        "\n",
         "    def cleansing_vehicles(self):\n",
         "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
         "      # transformations\n",
         "      df = df.withColumn(\"new_column\", lit(\"test\"))\n",
         "      df = df.drop_duplicates()\n",
         "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
+        "\n",
         "    def enrich(self):\n",
         "        pass\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    # init spark\n",
         "    from pyspark.sql import SparkSession\n",
         "    spark = SparkSession.builder.master('local').appName('ETL Program').getOrCreate()\n",
+        "\n",
         "    print(\"Starting ETL program\")\n",
         "    etl = ETLTask(spark)\n",
+        "\n",
         "    # run tasks\n",
         "    print(\"Running Task - Ingestion Vehicles\")\n",
         "    etl.ingestion_vehicles()\n",
+        "\n",
         "    print(\"Running Task - Ingestion Lines\")\n",
         "    etl.ingestion_lines()\n",
-        "    print(\"Running Task - Cleansing Vehicles\")\n",
+        "\n",
+        "    #print(\"Running Task - Cleansing Vehicles\")\n",
         "    # etl.cleansing_vehicles()\n",
+        "\n",
         "    #etl.enrich()\n",
-        "    print(\"ETL program completed\")"
+        "\n",
+        "    print(\"ETL program completed\")\n"
       ],
       "metadata": {
         "id": "1mC6d0Pw6EZM"
@@ -182,7 +202,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
